@@ -25,8 +25,11 @@
 #include <errno.h>
 #include <stdlib.h>
 #include <string.h>
-#include <netinet/in.h>
+#include <arpa/inet.h>
 #include <time.h>
+#include <sys/time.h>
+#include <sys/types.h>
+#include <unistd.h>
 
 #include "pool.h"
 #include "md5.h"
